crates/mockiato-compiletest/tests/ui/ignored_arguments.stderr
error: Ignored arguments are not supported
 --> $DIR/ignored_arguments.rs:5:19
  |
5 |     fn bar(&self, _: u64);
  |                   ^^^^^^
  |
note: Required for mockable traits
 --> $DIR/ignored_arguments.rs:3:1
  |
3 | #[mockable]
  | ^^^^^^^^^^^
