crates/mockiato-compiletest/tests/ui/ignored_arguments.rs
use mockiato::mockable;

#[mockable]
trait Foo {
    fn bar(&self, _: u64);
}

fn main() {}
